--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
     <title>
         Word Game
     </title>
@@ -18,8 +19,8 @@
 </header>
 
 <body>
-    <div class="container">
-        <h1 id="directions-text">PRESS ANY LETTER TO PLAY</h1>
+    <div>
+        <h1 id="directions-text">Press Any Letter To Play</h1>
     </div>
 
     <section id="mainbody">
